@@ -1,6 +1,7 @@
 /*
  * Copyright (c) 2010-2020 Brookhaven National Laboratory
  * Copyright (c) 2010-2020 Helmholtz-Zentrum Berlin für Materialien und Energie GmbH
+ * Copyright (C) 2026 European Spallation Source ERIC.
  * All rights reserved. Use is subject to license terms and conditions.
  */
 package org.phoebus.olog;
@@ -9,9 +10,6 @@ import org.springframework.context.ApplicationEventPublisher;
 
 import jakarta.servlet.http.HttpServletRequest;
 import org.apache.commons.collections4.CollectionUtils;
-import org.apache.tika.detect.Detector;
-import org.apache.tika.metadata.Metadata;
-import org.apache.tika.metadata.TikaCoreProperties;
 import org.phoebus.olog.entity.Attachment;
 import org.phoebus.olog.entity.Log;
 import org.phoebus.olog.entity.LogEntryGroupHelper;
@@ -54,10 +52,7 @@ import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.Parameters;
 import io.swagger.v3.oas.annotations.media.Schema;
 
-import java.io.BufferedInputStream;
-import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.security.Principal;
 import java.text.MessageFormat;
 import java.time.Duration;
@@ -65,11 +60,12 @@ import java.time.Instant;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.SortedSet;
+import java.util.TreeSet;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
@@ -129,9 +125,6 @@ public class LogResource {
 
     @Autowired
     private Detector detector;
-    
-    @Autowired
-    private ApplicationEventPublisher eventPublisher;
 
     /**
      * Custom HTTP header that client may send in order to identify itself. This is logged for some of the
@@ -234,7 +227,7 @@ public class LogResource {
     })
 
     public ResponseEntity<?> findLogs(@RequestHeader(value = OLOG_CLIENT_INFO_HEADER, required = false, defaultValue = "n/a") String clientInfo, @RequestParam MultiValueMap<String, String> allRequestParams) {
-        ResponseEntity responseEntity = search(clientInfo, allRequestParams);
+        ResponseEntity<?> responseEntity = search(clientInfo, allRequestParams);
         if (responseEntity.getStatusCode().equals(HttpStatus.OK)) {
             return new ResponseEntity<>(((SearchResult) responseEntity.getBody()).getLogs(), HttpStatus.OK);
         }
@@ -333,6 +326,7 @@ public class LogResource {
 	operationId = "createLog")
     public Log createLog(@RequestHeader(value = OLOG_CLIENT_INFO_HEADER, required = false, defaultValue = "n/a") String clientInfo,
                          @RequestParam(name = "markup", required = false) String markup,
+                         @RequestParam(name = "notifyWsClients", required = false, defaultValue = "true") boolean notifyWsClients,
                          @RequestParam(name = "inReplyTo", required = false, defaultValue = "-1") String inReplyTo,
                          @RequestBody Log log,
                          @AuthenticationPrincipal Principal principal) {
@@ -367,7 +361,9 @@ public class LogResource {
         eventPublisher.publishEvent(new LogEntryCreatedEvent(this, newLogEntry));
         sendToNotifiers(newLogEntry);
 
-        webSocketService.sendMessageToClients(new WebSocketMessage(MessageType.NEW_LOG_ENTRY, null));
+        if (notifyWsClients) {
+            webSocketService.sendMessageToClients(new WebSocketMessage(MessageType.NEW_LOG_ENTRY, null));
+        }
 
         logger.log(Level.INFO, () -> "Entry id " + newLogEntry.getId() + " created from " + clientInfo);
 
@@ -384,11 +380,12 @@ public class LogResource {
      * <p>Client calling this endpoint <b>must</b> set Content-Type=multipart/form-data.</p>
      *
      * @param clientInfo A string sent by client identifying it with respect to version and platform.
-     * @param logEntry   A {@link Log} object to be persisted.
+     * @param logEntry   A {@link Log} object to be persisted. If log entry does not specify any attachments,
+     *                   the {@link Log#getAttachments()} field is non-null and empty.
      * @param markup     Optional string identifying the wanted markup scheme.
      * @param inReplyTo  Optional log entry id specifying to which log entry the new log entry is a reply.
-     * @param files      Optional array of {@link MultipartFile}s representing attachments. These <b>must</b> appear in the same
-     *                   order as the {@link Attachment} items in the list of {@link Attachment}s of the log entry.
+     * @param files      Optional array of {@link MultipartFile}s representing attachments. This is <code>null</code>
+     *                   if log entry does not contain any attachments.
      * @param principal  The authenticated {@link Principal} of the request.
      * @return The persisted {@link Log} object.
      */
@@ -431,76 +428,61 @@ public class LogResource {
                          @RequestPart(value = "files", required = false) MultipartFile[] files,
                          @AuthenticationPrincipal Principal principal) {
 
-        if (files != null && logEntry.getAttachments() != null && files.length != logEntry.getAttachments().size()) {
+        if (!attachmentsUploadUtil.isAttachmentUploadConsistent(logEntry, files)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, TextUtil.ATTACHMENT_DATA_INVALID);
         }
 
-        List<MultipartFile> multipartFiles;
-
-        try {
-            multipartFiles = checkSupportedAttachmentTypes(files);
-        } catch (IllegalArgumentException exception) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, TextUtil.ATTACHMENT_HEIC_NOT_SUPPORTED);
-        }
-
-        Log newLogEntry = createLog(clientInfo, markup, inReplyTo, logEntry, principal);
+        List<MultipartFile> multipartFiles = null;
 
         if (files != null) {
-            for (MultipartFile multipartFile : multipartFiles) {
-                String originalFileName = multipartFile.getOriginalFilename();
-                Optional<Attachment> attachment =
-                        logEntry.getAttachments().stream()
-                                .filter(a -> a.getFilename() != null && a.getFilename().equals(originalFileName)).findFirst();
-                if (attachment.isEmpty()) { // Should not happen if client behaves correctly
-                    logger.log(Level.WARNING, () -> MessageFormat.format(TextUtil.ATTACHMENT_FILE_NOT_MATCHED_META_DATA, originalFileName));
-                    continue;
-                }
-
-                saveAttachment(Long.toString(newLogEntry.getId()),
-                        multipartFile,
-                        originalFileName,
-                        attachment.get().getId(),
-                        attachment.get().getFileMetadataDescription());
+            try {
+                multipartFiles = attachmentsUploadUtil.checkSupportedAttachmentTypes(files);
+            } catch (IllegalArgumentException exception) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, TextUtil.ATTACHMENT_HEIC_NOT_SUPPORTED);
             }
         }
 
-        logger.log(Level.INFO, () -> MessageFormat.format(TextUtil.LOG_ENTRY_ID_CREATED_FROM, newLogEntry.getId(), clientInfo));
+        // Attachments consistency checked, safe to create log entry
+        Log newLogEntry = createLog(clientInfo, markup, false, inReplyTo, logEntry, principal);
+
+        if (files != null) {
+            try {
+                List<Attachment> savedAttachments = saveAttachments(logEntry, multipartFiles);
+                newLogEntry.setAttachments(new TreeSet<>(savedAttachments));
+                newLogEntry = logRepository.update(newLogEntry);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
+        }
+
+        Long id = newLogEntry.getId();
+        webSocketService.sendMessageToClients(new WebSocketMessage(MessageType.NEW_LOG_ENTRY, null));
+
+        logger.log(Level.INFO, () -> MessageFormat.format(TextUtil.LOG_ENTRY_ID_CREATED_FROM, id, clientInfo));
 
         return newLogEntry;
     }
 
-
     /**
      * Saves the content of the {@link MultipartFile} to the database.
      *
-     * @param logId                   The log id associated with the attachment
      * @param file                    A {@link MultipartFile} representing the attachment contents
      * @param filename                The file name as defined by the client, e.g. file name on disk.
      * @param id                      A unique id for the attachment.
      * @param fileMetadataDescription Description of the content
-     * @return A {@link Log} where the attachment field has been updated with the saved attachment.
+     * @return A {@link Attachment} object representing the saved file.
      */
-    private Log saveAttachment(String logId,
-                               MultipartFile file,
-                               String filename,
-                               String id,
-                               String fileMetadataDescription) {
-        Optional<Log> foundLog = logRepository.findById(logId);
-        if (logRepository.findById(logId).isPresent()) {
-            filename = filename == null || filename.isEmpty() ? file.getName() : filename;
-            fileMetadataDescription = fileMetadataDescription == null || fileMetadataDescription.isEmpty()
-                    ? file.getContentType()
-                    : fileMetadataDescription;
-            Attachment attachment = new Attachment(id, file, filename, fileMetadataDescription);
-            // Store the attachment
-            Attachment createdAttachment = attachmentRepository.save(attachment);
-            SortedSet<Attachment> existingAttachments = foundLog.get().getAttachments();
-            existingAttachments.add(createdAttachment);
-            foundLog.get().setAttachments(existingAttachments);
-            return logRepository.update(foundLog.get());
-        } else {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, MessageFormat.format(TextUtil.LOG_NOT_RETRIEVED, logId));
-        }
+    private Attachment saveAttachment(MultipartFile file,
+                                      String filename,
+                                      String id,
+                                      String fileMetadataDescription) {
+        filename = filename == null || filename.isEmpty() ? file.getName() : filename;
+        fileMetadataDescription = fileMetadataDescription == null || fileMetadataDescription.isEmpty()
+                ? file.getContentType()
+                : fileMetadataDescription;
+        Attachment attachment = new Attachment(id, file, filename, fileMetadataDescription);
+        // Store the attachment
+        return attachmentRepository.save(attachment);
     }
 
     /**
@@ -513,10 +495,13 @@ public class LogResource {
      * </ul>
      * Notifiers - if such have been registered - are not called.
      *
-     * @param logId     The log id of the entry subject to update. It must exist, i.e. it is not created of not found.
-     * @param markup    Markup strategy, if any.
-     * @param log       The log record data as sent by client.
-     * @param principal The authenticated {@link Principal} of the request.
+     * @param logId           The log id of the entry subject to update. It must exist, i.e. it is not created of not found.
+     * @param markup          Markup strategy, if any.
+     * @param notifyWsClients Optional flag indicating if websocket clients should be notified when update is completed. Defaults
+     *                        to <code>true</code> (in a REST call), but since this method is also called from another
+     *                        endpoint it would be <code>false</code> to avoid multiple notifications.
+     * @param log             The log record data as sent by client.
+     * @param principal       The authenticated {@link Principal} of the request.
      * @return The updated log record, or HTTP status 404 if the log record does not exist. If the path
      * variable does not match the id in the log record, HTTP status 400 (bad request) is returned.
      */
@@ -534,6 +519,7 @@ public class LogResource {
 	operationId = "updateLog")
     public Log updateLog(@PathVariable(name = "logId") String logId,
                          @RequestParam(name = "markup", required = false) String markup,
+                         @RequestParam(name = "notifyWsClients", required = false, defaultValue = "true") boolean notifyWsClients,
                          @RequestBody Log log,
                          @AuthenticationPrincipal Principal principal) {
 
@@ -546,6 +532,13 @@ public class LogResource {
         if (foundLog.isPresent()) {
             Log persistedLog = foundLog.get();
             logRepository.archive(persistedLog);
+
+            // If persisted log has attachments not listed in the log submitted by client,
+            // remove those as it indicates user wants to remove attachments from the updated entry.
+            // However, such removed attachments are not deleted from persistence layer as they
+            // are still referenced in the archived log entry.
+            Collection<Attachment> retained = CollectionUtils.retainAll(persistedLog.getAttachments(), log.getAttachments());
+            persistedLog.setAttachments(new TreeSet<>(retained));
 
             // log entry group property should not be editable but remain if it exists
             Property logEntryGroupProperty = LogEntryGroupHelper.getLogEntryGroupProperty(log);
@@ -568,16 +561,64 @@ public class LogResource {
             persistedLog.setTitle(log.getTitle());
             persistedLog = cleanMarkup(markup, persistedLog);
 
-            webSocketService.sendMessageToClients(new WebSocketMessage(MessageType.LOG_ENTRY_UPDATED, persistedLog.getId().toString()));
-
-            //return logRepository.update(persistedLog);
             Log updatedLog = logRepository.update(persistedLog);
-            eventPublisher.publishEvent(new LogEntryCreatedEvent(this, updatedLog));
-                return updatedLog;
+            if (notifyWsClients) {
+                webSocketService.sendMessageToClients(new WebSocketMessage(MessageType.LOG_ENTRY_UPDATED, persistedLog.getId().toString()));
+            }
+            return updatedLog;
         } else {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, MessageFormat.format(TextUtil.LOG_NOT_RETRIEVED, logId));
         }
     
+    }
+
+    @PostMapping("/multipart")
+    public Log updateLog(@RequestParam(name = "markup", required = false) String markup,
+                         @RequestPart("logEntry") Log logEntry,
+                         @RequestPart(value = "files", required = false) MultipartFile[] files,
+                         @AuthenticationPrincipal Principal principal) {
+        if (logEntry == null || logEntry.getId() == null || logEntry.getId() < 0) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, TextUtil.LOG_ENTRY_ID_MISSING);
+        }
+
+        if (!attachmentsUploadUtil.isAttachmentUploadConsistent(logEntry, files)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, TextUtil.ATTACHMENT_DATA_INVALID);
+        }
+
+        Optional<Log> exitingLogEntryOptional = logRepository.findById(Long.toString(logEntry.getId()));
+        if (exitingLogEntryOptional.isEmpty()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
+                    MessageFormat.format(TextUtil.LOG_NOT_FOUND, logEntry.getId()));
+        }
+
+        // Check if additional attachments are uploaded correctly
+        List<MultipartFile> multipartFiles = null;
+
+        if (files != null) {
+            try {
+                multipartFiles = attachmentsUploadUtil.checkSupportedAttachmentTypes(files);
+            } catch (IllegalArgumentException exception) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, TextUtil.ATTACHMENT_HEIC_NOT_SUPPORTED);
+            }
+        }
+
+        Log updatedLog = updateLog(Long.toString(logEntry.getId()),
+                markup,
+                false,
+                logEntry,
+                principal);
+
+        //And then save the new attachments
+        if (files != null) {
+            List<Attachment> savedAttachments = saveAttachments(logEntry, multipartFiles);
+            updatedLog.getAttachments().addAll(new TreeSet<>(savedAttachments));
+            updatedLog = logRepository.update(updatedLog);
+        }
+
+        webSocketService.sendMessageToClients(new WebSocketMessage(MessageType.LOG_ENTRY_UPDATED, updatedLog.getId().toString()));
+
+        return updatedLog;
+
     }
 
     @SuppressWarnings("unused")
@@ -671,11 +712,11 @@ public class LogResource {
      *            added if a {@link Property} with the same name (case sensitive) is present in the log entry.
      */
     private void addPropertiesFromProviders(Log log) {
-        List<String> propertyNames = log.getProperties().stream().map(Property::getName).collect(Collectors.toList());
+        List<String> propertyNames = log.getProperties().stream().map(Property::getName).toList();
         List<CompletableFuture<Property>> completableFutures =
                 propertyProviders.stream()
                         .map(propertyProvider -> CompletableFuture.supplyAsync(() -> propertyProvider.getProperty(log), executorService))
-                        .collect(Collectors.toList());
+                        .toList();
 
         CompletableFuture<Void> allFutures =
                 CompletableFuture.allOf(completableFutures.toArray(new CompletableFuture[completableFutures.size()]));
@@ -798,98 +839,32 @@ public class LogResource {
     }
 
     /**
-     * For each {@link MultipartFile} in the provided list, this method will check the type of attachment in order
-     * to be able to reject unsupported types (e.g. HEIC image files). As it operates on the {@link InputStream} provided
-     * through a {@link MultipartFile}, and in order to be able to consume that stream again when saving to
-     * the attachments database, the original {@link MultipartFile} is cloned to a new one where the {@link InputStream}
-     * is wrapped in a {@link BufferedInputStream}.
+     * Saves {@link Attachment}s to the repository.
      * <p>
-     * The analysis of content type is delegated to Apache Tika. If an unsupported content type is encountered,
-     * this methid throws an {@link IllegalArgumentException}.
+     * <b>NOTE</b> before calling this callee needs to ensure that the provided parameters are
+     * checked for consistency.
      * </p>
      *
-     * @param multipartFiles Array of {@link MultipartFile}s from client as intercepted by the endpoint.
-     * @return A {@link List} of {@link MultipartFile}s where the {@link InputStream} can be consumed again.
-     * @throws IllegalArgumentException if an unsupported content type is encontered.
-     *
+     * @param logEntry       A log entry inlcuding {@link Attachment}s
+     * @param multipartFiles The fils uploaded by client
+     * @return A {@link List} of {@link Attachment}s representing the persisted attachment files.
      */
-    protected List<MultipartFile> checkSupportedAttachmentTypes(MultipartFile[] multipartFiles) {
-        if (multipartFiles == null || multipartFiles.length == 0) {
-            return null;
-        }
+    protected List<Attachment> saveAttachments(Log logEntry, List<MultipartFile> multipartFiles) {
+        List<Attachment> savedAttachments = new ArrayList<>();
 
-        List<MultipartFile> attachmentFiles = new ArrayList<>();
         for (MultipartFile multipartFile : multipartFiles) {
-            try {
-                Metadata metadata = new Metadata();
-                metadata.add(TikaCoreProperties.RESOURCE_NAME_KEY, multipartFile.getName());
-                InputStream inputStream = new BufferedInputStream(multipartFile.getInputStream());
-                org.apache.tika.mime.MediaType mediaType = detector.detect(inputStream, metadata);
-                String type = mediaType.getBaseType().toString().toLowerCase();
-                if (type.contains("heic") || type.contains("heif")) {
-                    throw new IllegalArgumentException("Encountered HEIC file in attachments upload");
-                }
-                attachmentFiles.add(new OlogMultipartFile(multipartFile, inputStream));
-            } catch (IOException e) {
-                logger.log(Level.WARNING, "Failed to read multipart file stream or determine file content", e);
-                throw new RuntimeException(e);
-            }
+            String originalFileName = multipartFile.getOriginalFilename();
+            Optional<Attachment> attachment =
+                    logEntry.getAttachments().stream()
+                            .filter(a -> a.getFilename() != null && a.getFilename().equals(originalFileName)).findFirst();
+            savedAttachments.add(saveAttachment(multipartFile,
+                    originalFileName,
+                    attachment.get().getId(),
+                    attachment.get().getFileMetadataDescription()));
         }
-        return attachmentFiles;
+
+        return savedAttachments;
     }
 
-    /**
-     * A {@link MultipartFile} implementation with the purpose of providing a custom {@link InputStream}.
-     */
-    private static final class OlogMultipartFile implements MultipartFile {
-
-        private final MultipartFile originalMultipartFile;
-        private final InputStream inputStream;
-
-        public OlogMultipartFile(MultipartFile originalMultipartFile, InputStream inputStream) {
-            this.originalMultipartFile = originalMultipartFile;
-            this.inputStream = inputStream;
-        }
-
-        @Override
-        public String getName() {
-            return originalMultipartFile.getName();
-        }
-
-        @Override
-        public String getOriginalFilename() {
-            return originalMultipartFile.getOriginalFilename();
-        }
-
-        @Override
-        public String getContentType() {
-            return originalMultipartFile.getContentType();
-        }
-
-        @Override
-        public boolean isEmpty() {
-            return originalMultipartFile.isEmpty();
-        }
-
-        @Override
-        public long getSize() {
-            return originalMultipartFile.getSize();
-        }
-
-        @Override
-        public byte[] getBytes() throws IOException {
-            return originalMultipartFile.getBytes();
-        }
-
-        @Override
-        public InputStream getInputStream() throws IOException {
-            return inputStream;
-        }
-
-        @Override
-        public void transferTo(File dest) throws IOException, IllegalStateException {
-            originalMultipartFile.transferTo(dest);
-        }
-    }
 
 }
